--- a/referencelayer/dao/src/test/resources/metabolightsMYSQL.properties
+++ b/referencelayer/dao/src/test/resources/metabolightsMYSQL.properties
@@ -1,6 +1,6 @@
 host:localhost
 port:3306
-user:XXX
-password:XXX
+user:isatab
+password:isatab
 driver:com.mysql.jdbc.Driver
 instance:metabolights
