Remove big sample test file Change layout: list to dropdown list, above the spectra.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1383 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/referencelayer/spectrumbrowser/src/main/webapp/WEB-INF/web.xml
+++ b/referencelayer/spectrumbrowser/src/main/webapp/WEB-INF/web.xml
@@ -7,4 +7,8 @@
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
+    <mime-mapping>
+        <extension>json</extension>
+        <mime-type>text/javascript</mime-type>
+    </mime-mapping>
 </web-app>
