--- a/referencelayer/importer/pom.xml
+++ b/referencelayer/importer/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
         <artifactId>referencelayer</artifactId>
-        <version>0.2</version>
+        <version>0.3</version>
     </parent>
 
 	<build>
@@ -101,7 +101,7 @@
         <dependency>
             <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
             <artifactId>dao</artifactId>
-            <version>0.4-SNAPSHOT</version>
+            <version>0.6-SNAPSHOT</version>
         </dependency>
    		<dependency>
 			<groupId>uk.ac.ebi.biobabel</groupId>
@@ -118,5 +118,11 @@
             <artifactId>rhea-ws-client</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.mdk</groupId>
+            <artifactId>mdk-service-soap</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
     </dependencies>
 </project>
