--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -25,7 +25,7 @@
             {
                 "selected": false,
                 "title": "Reference layer",
-                "href": "refLayerSearch",
+                "href": "reflayersearch",
                 "tooltip": "Reference layer"
             },
             {
