Added reference layer (BETA) into the header
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1417 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -18,15 +18,15 @@
             },
             {
                 "selected": false,
-                "title": "Browse",
+                "title": "Browse Studies",
                 "href": "browse",
-                "tooltip": "Browse"
+                "tooltip": "Browse Studies"
             },
             {
                 "selected": false,
-                "title": "Reference layer",
+                "title": "Reference layer (BETA)",
                 "href": "reflayersearch",
-                "tooltip": "Reference layer"
+                "tooltip": "Reference layer (BETA)"
             },
             {
                 "selected": false,
