--- a/metabolights-utils/metabolights-sampledb/pom.xml
+++ b/metabolights-utils/metabolights-sampledb/pom.xml
@@ -37,6 +37,10 @@
                     <artifactId>commons-lang</artifactId>
                     <groupId>commons-lang</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>log4j</artifactId>
+                    <groupId>log4j</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -49,6 +53,12 @@
             <artifactId>javacsv</artifactId>
             <version>2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
