Hibernate log4j trace etc. for debug and database performance tuning
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1447 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/log4j.properties
+++ b/metabolights-webapps/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %5p %-80m - %c:%L %n
 log4j.category.org.springframework.beans.factory=ERROR
 
-# Messages are not propagated upstream
+#ï¿½Messages are not propagated upstream
 log4j.additivity.default=false
 
 # All downstream loggers have the same appender. Minimal logging by default
@@ -18,21 +18,36 @@ log4j.rootLogger=INFO,FixedFileApp,ConsoleApp
 #log4j.logger.org.isatools.isatab=ALL
 #log4j.logger.org.isatools.isatab_v1=ALL
 
+#Hibernate logging, must be set together with hibernate.properties
+#log4j.logger.org.hibernate=INFO, hb
+#log4j.logger.org.hibernate.SQL=DEBUG
+#log4j.logger.org.hibernate.type=TRACE
+#log4j.logger.org.hibernate.hql.ast.AST=info
+#log4j.logger.org.hibernate.tool.hbm2ddl=warn
+#log4j.logger.org.hibernate.hql=debug
+#log4j.logger.org.hibernate.cache=info
+#log4j.logger.org.hibernate.jdbc=debug
+#log4j.appender.hb=org.apache.log4j.FileAppender
+#log4j.appender.hb.layout=org.apache.log4j.PatternLayout
+#log4j.appender.hb.layout.ConversionPattern=HibernateLog --> %d{HH:mm:ss} %-5p %c - %m%n
+#log4j.appender.hb.File=hibernate.log
+#log4j.appender.hb.Threshold=TRACE
+
 # ***** The Console Appender.
 log4j.appender.ConsoleApp=org.apache.log4j.ConsoleAppender
 log4j.appender.ConsoleApp.layout=org.apache.log4j.PatternLayout
 #log4j.appender.ConsoleApp.layout.ConversionPattern=%d [%-5p] (%t,%C{1},%L): %m%n
 log4j.appender.ConsoleApp.layout.ConversionPattern=%d [%x]: %m%n
-log4j.appender.ConsoleApp.threshold=INFO
+log4j.appender.ConsoleApp.threshold=ERROR
 
 # ***** The "Fixed" File Appender
 #
 # If you use this file, all the tools log into isatools.log and into the directory from which the tool
-# is started.
+#ï¿½is started.
 #
-# WARNING: if you don't use this appender and with the name below, the ISA tools won't be able to show you
-# the log files when you click the corresponding feature from the graphical interface.
-# 
+#ï¿½WARNING: if you don't use this appender and with the name below, the ISA tools won't be able to show you
+#ï¿½the log files when you click the corresponding feature from the graphical interface.
+#ï¿½
 log4j.appender.FixedFileApp=org.apache.log4j.FileAppender
 log4j.appender.FixedFileApp.layout=org.apache.log4j.PatternLayout
 log4j.appender.FixedFileApp.layout.ConversionPattern=%d {%x} [%-5p] (%C{1},%L): %m%n
@@ -44,8 +59,8 @@ log4j.appender.FixedFileApp.threshold=ALL
 
 # ***** The "Variable" File Appender
 #
-# If you use this, a log file is saved in different locations depending on the tool you're using,
-# For instance, validator and data manager/loader will save isatools.log into the input submission directory.
+#ï¿½If you use this, a log file is saved in different locations depending on the tool you're using,
+#ï¿½For instance, validator and data manager/loader will save isatools.log into the input submission directory.
 # This log file is always added to the default, which is isatools.log and is saved under the starting directory.
 #
 # By default this is not used.
@@ -59,3 +74,4 @@ log4j.appender.FileApp.Append=false
 log4j.appender.FileApp.BufferedIO=false
 log4j.appender.FileApp.BufferSize=1024
 log4j.appender.FileApp.threshold=ALL
+
