Hibernate log4j trace etc. for debug and database performance tuning
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1448 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/hibernate.properties.template
+++ b/metabolights-webapps/src/main/resources/hibernate.properties.template
@@ -18,6 +18,11 @@ jdbc.format_sql=false
 # Change this to get some debug info
 hibernate.show_sql=false
 
+# Change this to get debug info for Hibernate
+hibernate.show_sql=false
+hibernate.format_sql=false
+hibernate.use_sql_comments=false
+
 # Set to 0 if you have problems with the Oracle Driver
 # (See http://forum.hibernate.org/viewtopic.php?t=82)
 hibernate.max_fetch_depth=0
