Add proxy for chebi webservice and BioJS component changed to use new url). Rerstrict /proxy to access only instances urls.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1458 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
@@ -64,27 +64,26 @@
         <location>/errors/403</location>
     </error-page>
 
-    <!--<servlet> &lt;!&ndash; proxy for SpecBrowser call outside url &ndash;&gt;-->
-        <!--<servlet-name>ProxySpectraBrowser</servlet-name>-->
-        <!--<servlet-class>uk.ac.ebi.pride.web.util.servlet.proxy.ProxyServlet</servlet-class>-->
-        <!--<init-param>-->
-            <!--<param-name>proxyHost</param-name>-->
-            <!--<param-value>wwwdev.ebi.ac.uk</param-value>-->
-        <!--</init-param>-->
-        <!--<init-param>-->
-            <!--<param-name>proxyPort</param-name>-->
-            <!--<param-value>80</param-value>-->
-        <!--</init-param>-->
-        <!--<init-param>-->
-            <!--<param-name>proxyPath</param-name>-->
-            <!--<param-value>/metabolights/specbrowser</param-value>-->
-        <!--</init-param>-->
-        <!--<load-on-startup>1</load-on-startup>-->
-    <!--</servlet>-->
-    <!--<servlet-mapping>-->
-        <!--<servlet-name>ProxySpectraBrowser</servlet-name>-->
-        <!--<url-pattern>/specbrowser/*</url-pattern>-->
-    <!--</servlet-mapping>-->
+    <servlet>
+        <servlet-name>ChEBIProxy</servlet-name>
+        <servlet-class>uk.ac.ebi.pride.web.util.servlet.proxy.ProxyServlet</servlet-class>
+        <init-param>
+            <param-name>proxyHost</param-name>
+            <param-value>www.ebi.ac.uk</param-value>
+        </init-param>
+        <init-param>
+            <param-name>proxyPort</param-name>
+            <param-value>80</param-value>
+        </init-param>
+        <init-param>
+            <param-name>proxyPath</param-name>
+            <param-value>/webservices/chebi/2.0/test/</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ChEBIProxy</servlet-name>
+        <url-pattern>/ebi/webservices/chebi/2.0/test/*</url-pattern>
+    </servlet-mapping>
 
 
     <servlet>
