--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -272,10 +272,11 @@
             <artifactId>guava</artifactId>
             <version>12.0</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>uk.ac.ebi.pride.web</groupId>-->
-            <!--<artifactId>pride-web-utils</artifactId>-->
-            <!--<version>1.2</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>uk.ac.ebi.pride.web</groupId>
+            <artifactId>pride-web-utils</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
     </dependencies>
 </project>
