--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -283,6 +283,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <artifactId>metabolights-ws-client</artifactId>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 </project>
