Reference Layer (BETA) changed to "Browse Compounds". IsaTabUploader, just todo's where we need to add the reference (jndi) to external ISA-config folders (for both webapp and ws)
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1485 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -24,9 +24,9 @@
             },
             {
                 "selected": false,
-                "title": "Reference layer (BETA)",
+                "title": "Browse Compounds",
                 "href": "reference",
-                "tooltip": "Reference layer (BETA)"
+                "tooltip": "Reference layer Compounds (BETA)"
             },
             {
                 "selected": false,
