--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>metabolights-model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>isatab-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
