Tidy up dependencies: Remove Spring + plus hibernate dependencies form root pom Add spring dependencies to webapp and webservice Add hibernate dependencies to webapp Fix why maven war plugin options weren't shown in intelliJ for webservice module.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1517 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-utils/pom.xml
+++ b/metabolights-utils/pom.xml
@@ -20,6 +20,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>isatab-utils</module>
+        <module>metabolights-mztab</module>
+        <module>metabolights-sampledb</module>
     </modules>
 
 
