--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
   <modules>
      <module>metabolights-webapps</module>
      <module>referencelayer</module>
+     <module>metabolights-utils</module>
+     <module>metabolights-domain</module>
+     <module>metabolights-dao</module>
+     <module>metabolights-webservice</module>
+     <module>metabolights-ws-client</module>
   </modules>
   
   <build>
@@ -46,20 +51,6 @@
  		<version>4.8.2</version>
  		<type>jar</type>
  		<scope>test</scope>
- 	</dependency>    
- 	<dependency>
- 		<groupId>org.hibernate</groupId>
- 		<artifactId>hibernate-annotations</artifactId>
- 		<version>3.4.0.GA</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>
-  	<dependency>
- 		<groupId>org.hibernate</groupId>
- 		<artifactId>hibernate</artifactId>
- 		<version>3.5.4-Final</version>
- 		<type>pom</type>
- 		<scope>compile</scope>
  	</dependency>
     <dependency>
         <groupId>commons-io</groupId>
@@ -68,111 +59,12 @@
         <type>jar</type>
         <scope>compile</scope>
     </dependency>
-    <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-search</artifactId>
-        <version>3.4.0.Final</version>
-        <type>pom</type>
-        <scope>compile</scope>
-        <exclusions>
-            <exclusion>
-                <artifactId>commons-io</artifactId>
-                <groupId>org.apache.commons</groupId>
-            </exclusion>
-        </exclusions>
-    </dependency>
+
  	<dependency>
  		<groupId>log4j</groupId>
  		<artifactId>log4j</artifactId>
  		<version>1.2.16</version>
  	 	<type>jar</type>	
- 		<scope>compile</scope>
- 	</dependency>	
-  	<dependency>
- 		<groupId>javassist</groupId>
- 		<artifactId>javassist</artifactId>
- 		<version>3.12.1.GA</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>	
- 	<dependency>
- 		<groupId>org.apache.lucene</groupId>
- 		<artifactId>lucene-core</artifactId>
- 		<version>2.9.2</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>
-  	<dependency>
-         	<groupId>oracle</groupId>
-         	<artifactId>ojdbc6</artifactId>
-         	<version>11.2.0.2</version>
- 	</dependency>	
- 	<dependency>
- 		<groupId>org.springframework</groupId>
- 		<artifactId>spring-context</artifactId>
- 		<version>${org.spring.version}</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency> 	
-        <dependency>
- 		<groupId>org.springframework</groupId>
- 		<artifactId>spring-aop</artifactId>
- 		<version>${org.spring.version}</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>
- 	<dependency>
- 		<groupId>org.springframework</groupId>
- 		<artifactId>spring-orm</artifactId>
- 		<version>${org.spring.version}</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>
- 	<dependency>
- 		<groupId>org.springframework</groupId>
- 		<artifactId>spring-web</artifactId>
- 		<version>${org.spring.version}</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>
-        <dependency>
-        	<groupId>org.springframework.security</groupId>
-        	<artifactId>spring-security-core</artifactId>
-        	<version>${org.spring.version}</version>
-        </dependency>
- 	<dependency>
- 		<groupId>org.springframework.security</groupId>
- 		<artifactId>spring-security-config</artifactId>
- 		<version>${org.spring.version}</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>
- 	<dependency>
- 		<groupId>org.springframework.security</groupId>
- 		<artifactId>spring-security-taglibs</artifactId>
- 		<version>${org.spring.version}</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency> 
- 	<dependency>
- 		<groupId>org.springframework</groupId>
- 		<artifactId>spring-beans</artifactId>
- 		<version>${org.spring.version}</version>
- 		<type>pom</type>
- 		<scope>compile</scope>
- 	</dependency>
- 	<dependency>
- 		<groupId>org.springframework</groupId>
- 		<artifactId>spring-context-support</artifactId>
- 		<version>${org.spring.version}</version>
- 		<type>jar</type>
- 		<scope>compile</scope>
- 	</dependency>
- 	<dependency>
- 		<groupId>org.springframework</groupId>
- 		<artifactId>spring-webmvc</artifactId>
- 		<version>${org.spring.version}</version>
- 		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
   </dependencies>  
