--- a/metabolights-utils/metabolights-sampledb/pom.xml
+++ b/metabolights-utils/metabolights-sampledb/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>sampleTabExporter</groupId>
     <artifactId>sampleTabExporter</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
 
     <developers>
         <developer>
@@ -30,6 +30,10 @@
             <version>1.1.3</version>
             <exclusions>
                 <exclusion>
+                    <artifactId>fluxion-spi</artifactId>
+                    <groupId>net.sourceforge.fluxion</groupId>
+                </exclusion>
+                <exclusion>
                     <artifactId>slf4j-api</artifactId>
                     <groupId>org.slf4j</groupId>
                 </exclusion>
@@ -42,6 +46,11 @@
                     <groupId>log4j</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.fluxion</groupId>
+            <artifactId>fluxion-spi</artifactId>
+            <version>1.0-alpha</version>
         </dependency>
         <dependency>
             <groupId>org.isatools</groupId>
