Updating poms to 1.2 Solving some dependency issues.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1527 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-domain/pom.xml
+++ b/metabolights-domain/pom.xml
@@ -17,11 +17,11 @@
     <parent>
         <artifactId>metabolights-main</artifactId>
         <groupId>uk.ac.ebi.metabolights</groupId>
-        <version>1.1</version>
+        <version>1.2</version>
     </parent>
 
     <groupId>uk.ac.ebi.metabolights</groupId>
-    <artifactId>metabolights-model</artifactId>
+    <artifactId>metabolights-domain</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
