--- a/metabolights-utils/pom.xml
+++ b/metabolights-utils/pom.xml
@@ -14,13 +14,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <artifactId>metabolights-main</artifactId>
+        <groupId>uk.ac.ebi.metabolights</groupId>
+        <version>1.2</version>
+    </parent>
+
+
     <groupId>uk.ac.ebi.metabolights</groupId>
     <artifactId>metabolights-utils</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>isatab-utils</module>
-        <module>metabolights-mztab</module>
+        <!--<module>metabolights-mztab</module>-->
         <module>metabolights-sampledb</module>
     </modules>
 
