--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.ebi.metabolights</groupId>
   <artifactId>metabolights-main</artifactId>
-  <version>1.1</version>
+  <version>1.2</version>
   <packaging>pom</packaging>
   <name>MetaboLights main project</name>
   <description>MetaboLights Main Project</description>
@@ -36,6 +36,7 @@
   <!-- Shared version number properties -->
   <properties>
   	<org.spring.version>3.1.0.RELEASE</org.spring.version>
+    <org.apache.commons.lang.version>2.5</org.apache.commons.lang.version>
   </properties>
   
   <dependencies>
