--- a/referencelayer/domain/pom.xml
+++ b/referencelayer/domain/pom.xml
@@ -5,7 +5,7 @@
     <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
     <artifactId>domain</artifactId>
     <version>0.6-SNAPSHOT</version>
-    <name>Domain model</name>
+    <name>Reference layer domain</name>
 
     <parent>
         <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
@@ -98,5 +98,10 @@
 		</plugins>
 	</build>
     <dependencies>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${org.apache.commons.lang.version}</version>
+        </dependency>
     </dependencies>
 </project>
