--- a/metabolights-utils/metabolights-mztab/pom.xml
+++ b/metabolights-utils/metabolights-mztab/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>metabolights-main</artifactId>
+        <artifactId>metabolights-utils</artifactId>
         <groupId>uk.ac.ebi.metabolights</groupId>
-        <version>1.2</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>mztabExporter</groupId>
@@ -70,5 +70,11 @@
         </plugins>
     </build>
 
-
+    <repositories>
+        <repository>
+            <id>ebi-repo</id>
+            <name>The EBI internal repository</name>
+            <url>http://www.ebi.ac.uk/~maven/m2repo</url>
+        </repository>
+    </repositories>
 </project>
