--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -385,6 +385,11 @@
             <groupId>uk.ac.ebi.metabolights</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <artifactId>isatab-utils</artifactId>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>javassist</groupId>-->
             <!--<artifactId>javassist</artifactId>-->
