Updating poms to 1.3 Trying to fix Jenkings error. sampletab reader uses now isaTabutils, tests fixed.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1536 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/referencelayer/dao/pom.xml
+++ b/referencelayer/dao/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
-    <artifactId>dao</artifactId>
+    <artifactId>referencelayer-dao</artifactId>
     <version>0.7-SNAPSHOT</version>
     <name>Reference layer Data Access Object</name>
 
