--- a/metabolights-utils/metabolights-sampledb/pom.xml
+++ b/metabolights-utils/metabolights-sampledb/pom.xml
@@ -7,6 +7,13 @@
     <groupId>sampleTabExporter</groupId>
     <artifactId>sampleTabExporter</artifactId>
     <version>1.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <parent>
+        <groupId>uk.ac.ebi.metabolights</groupId>
+        <artifactId>metabolights-utils</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <developers>
         <developer>
@@ -46,6 +53,11 @@
                     <groupId>log4j</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>metabolights-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.fluxion</groupId>
@@ -122,8 +134,6 @@
             </plugin>
         </plugins>
     </build>
-
-
     <repositories>
         <repository>
             <id>limpopo-repo</id>
@@ -138,29 +148,5 @@
             <id>wso2</id>
             <url>http://dist.wso2.org/qarepo/</url>
         </repository>
-        <repository>
-            <id>intact-repo</id>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo</url>
-        </repository>
-        <repository>
-            <id>chebi-repo-snapshot</id>
-            <name>ChEBI Repository</name>
-            <url>http://www.ebi.ac.uk/~biobabel/maven2_repo</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>ebi-repo</id>
-            <name>The EBI internal repository</name>
-            <url>http://www.ebi.ac.uk/~maven/m2repo</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
     </repositories>
-
 </project>
