--- a/metabolights-utils/pom.xml
+++ b/metabolights-utils/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <artifactId>metabolights-main</artifactId>
         <groupId>uk.ac.ebi.metabolights</groupId>
-        <version>1.2</version>
+        <version>1.3</version>
     </parent>
 
 
@@ -27,7 +27,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>isatab-utils</module>
-        <!--<module>metabolights-mztab</module>-->
+        <module>metabolights-mztab</module>
         <module>metabolights-sampledb</module>
     </modules>
 
