--- a/metabolights-utils/metabolights-sampledb/pom.xml
+++ b/metabolights-utils/metabolights-sampledb/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 12/09/13 11:08
+  ~ Last modified: 12/09/13 14:33
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -30,6 +30,13 @@
             <id>khaug</id>
             <name>Kenneth Haug</name>
             <email>kenneth@ebi.ac.uk</email>
+            <organization>EMBL-EBI</organization>
+            <timezone>0</timezone>
+        </developer>
+        <developer>
+            <id>conesa</id>
+            <name>Pablo Conesa</name>
+            <email>conesa@ebi.ac.uk</email>
             <organization>EMBL-EBI</organization>
             <timezone>0</timezone>
         </developer>
@@ -68,7 +75,7 @@
         <dependency>
             <groupId>org.isatools</groupId>
             <artifactId>ISAcreator</artifactId>
-            <version>1.7.1</version>
+            <version>1.7.3</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.javacsv</groupId>
@@ -79,6 +86,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
         </dependency>
 
     </dependencies>
