--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 12/09/13 15:42
+  ~ Last modified: 13/09/13 12:26
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -32,8 +32,8 @@
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
-            <artifactId>metabolights-model</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>metabolights-domain</artifactId>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
