--- a/metabolights-utils/metabolights-mztab/pom.xml
+++ b/metabolights-utils/metabolights-mztab/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 12/09/13 14:38
+  ~ Last modified: 16/09/13 14:26
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -17,12 +17,12 @@
     <parent>
         <artifactId>metabolights-utils</artifactId>
         <groupId>uk.ac.ebi.metabolights</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>mztabExporter</groupId>
-    <artifactId>mztabExporter</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>uk.ac.ebi.metabolights</groupId>
+    <artifactId>metabolights-mztab</artifactId>
+    <version>1.1-SNAPSHOT</version>
 
     <developers>
         <developer>
@@ -50,6 +50,14 @@
             <artifactId>jmztab</artifactId>
             <version>1.0.9</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>metabolights-sampledb</artifactId>
+            <version>1.1-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+
+
     </dependencies>
 
     <build>
