--- a/metabolights-utils/metabolights-sampledb/pom.xml
+++ b/metabolights-utils/metabolights-sampledb/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 12/09/13 14:43
+  ~ Last modified: 16/09/13 15:19
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -14,15 +14,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>sampleTabExporter</groupId>
-    <artifactId>sampleTabExporter</artifactId>
+    <groupId>uk.ac.ebi.metabolights</groupId>
+    <artifactId>metabolights-sampledb</artifactId>
     <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>uk.ac.ebi.metabolights</groupId>
         <artifactId>metabolights-utils</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <developers>
@@ -31,14 +31,12 @@
             <name>Kenneth Haug</name>
             <email>kenneth@ebi.ac.uk</email>
             <organization>EMBL-EBI</organization>
-            <timezone>0</timezone>
         </developer>
         <developer>
             <id>conesa</id>
             <name>Pablo Conesa</name>
             <email>conesa@ebi.ac.uk</email>
             <organization>EMBL-EBI</organization>
-            <timezone>0</timezone>
         </developer>
     </developers>
 
