--- a/metabolights-utils/pom.xml
+++ b/metabolights-utils/pom.xml
@@ -3,8 +3,8 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 9/6/13 2:23 PM
-  ~ Modified by:   conesa
+  ~ Last modified: 13/09/13 11:51
+  ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
   -->
@@ -24,7 +24,7 @@
     <groupId>uk.ac.ebi.metabolights</groupId>
     <artifactId>metabolights-utils</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
     <modules>
         <module>isatab-utils</module>
         <module>metabolights-mztab</module>
