--- a/metabolights-utils/metabolights-mztab/pom.xml
+++ b/metabolights-utils/metabolights-mztab/pom.xml
@@ -3,7 +3,7 @@
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
-  ~ Last modified: 24/09/13 16:04
+  ~ Last modified: 26/09/13 14:01
   ~ Modified by:   kenneth
   ~
   ~ Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -22,7 +22,7 @@
 
     <groupId>uk.ac.ebi.metabolights</groupId>
     <artifactId>metabolights-mztab</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
 
     <developers>
         <developer>
@@ -50,6 +50,12 @@
             <artifactId>jmztab</artifactId>
             <version>1.0.9</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>metabolights-dao</artifactId>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
